--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Buon Compleanno, Emanuela! 🎉</title>
-  <meta name="description" content="Mini webapp di auguri con sorprese, citazioni, viaggi, libri e ricette. Buon compleanno, Emanuela!">
+  <title>Buon Compleanno, Manu! 🎉</title>
+  <meta name="description" content="Mini webapp di auguri con sorprese, citazioni, viaggi, libri e ricette. Buon compleanno, Manu!">
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Fonts -->
@@ -41,7 +41,7 @@
   <!-- BANNER GIORNO SPECIALE (23 AGOSTO) -->
   <div id="specialDay" class="hidden fixed top-4 left-4 z-40 glass bg-gradient-to-r from-pink-500/90 to-purple-500/90 text-white px-4 py-2 rounded-2xl shadow-soft">
     <div class="text-sm font-bold">🎉 Giorno Speciale!</div>
-    <div class="text-xs">È il 23 agosto! Auguri Emanuela! ✨</div>
+    <div class="text-xs">È il 23 agosto! Auguri Manu! ✨</div>
   </div>
 
   <!-- CONFETTI -->
@@ -54,7 +54,7 @@
       <div id="cakeCount" class="text-sm text-purple-700 font-semibold mt-1"></div>
     </button>
     <h1 class="text-4xl md:text-6xl font-bold bg-gradient-to-r from-pink-600 via-purple-600 to-indigo-600 bg-clip-text text-transparent mt-4">
-      Buon Compleanno, Emanuela! 🎉
+      Buon Compleanno, Manu! 🎉
     </h1>
     <p class="text-lg md:text-xl text-gray-700 mt-2">23 Agosto 2025 — un giorno speciale per una persona speciale</p>
     <p class="text-base text-gray-600 mt-1">Creato con affetto dal tuo prof d'inglese preferito, nonchè spacciatore di ricettari vari 💛</p>
@@ -368,7 +368,7 @@
     { id: 'artu', title: 'Artù & Amici a 4 Zampe', color: 'from-amber-500 to-orange-600', icon: '🐾', content: () => ({ img: artuImg, profile: dogProfile, tips: dogCareTips, placesLP: rotateWeekly(dogFriendlyLP,3), placesIT: rotateWeekly(dogFriendlyIT,3), activities: rotateWeekly(dogActivities,3) }) },
     { id: 'travel', title: 'Viaggi & Montagna', color: 'from-green-600 to-teal-700', icon: '🏔️', content: () => rotate(travelDestinations, 2) },
     { id: 'horoscope', title: 'Oroscopo del giorno', color: 'from-red-400 to-pink-400', icon: '⭐', content: () => rotate(dailyHoroscopes, 1) },
-    { id: 'surprise', title: 'Sorpresa speciale', color: 'from-indigo-400 to-purple-400', icon: '🎁', content: () => "Emanuela, sei una persona speciale che porta luce ovunque va! ✨" }
+    { id: 'surprise', title: 'Sorpresa speciale', color: 'from-indigo-400 to-purple-400', icon: '🎁', content: () => "Manu, sei una persona speciale che porta luce ovunque va! ✨" }
   ];
 
   // ===== Render grid =====
@@ -683,7 +683,7 @@
         foundSecrets.add('treasure');
         updateSecretsHUD();
         fireConfetti();
-        toast('🏆 TESORO TROVATO!', 'Hai completato la caccia al tesoro segreta! Emanuela, sei incredibile!', '🎉');
+        toast('🏆 TESORO TROVATO!', 'Hai completato la caccia al tesoro segreta! Manu, sei incredibile!', '🎉');
       }
     } else if (sequence.includes(id)) {
       treasureHuntStep = (id === 'optimism') ? 1 : 0;
@@ -711,7 +711,7 @@
       foundSecrets.add('konami');
       updateSecretsHUD();
       fireConfetti();
-      toast('🚀 SUPER SEGRETO', "Hai inserito il codice segreto! Emanuela, sei una hacker del cuore! 💝", '💝');
+      toast('🚀 SUPER SEGRETO', "Hai inserito il codice segreto! Manu, sei una hacker del cuore! 💝", '💝');
       konamiSequence = [];
     }
   }
@@ -742,7 +742,7 @@
   // ===== Share & Party buttons =====
   $('#shareBtn').addEventListener('click', async () => {
     const shareData = {
-      title: "Buon Compleanno, Emanuela!",
+      title: "Buon Compleanno, Manu!",
       text: "Apri questa mini webapp con sorprese 🎁",
       url: location.href
     };
